# swagger.json
@@ -4387,7 +4387,7 @@
                   "groupLink": {
                     "type": "string",
                     "description": "Unique whatsApp identifier for the given Chat (either group or personnal)",
-                    "example": "5515998566622@c.us"
+                    "example": "https://chat.whatsapp.com/<group_id>"
                   }
                 }
               }
@@ -4399,7 +4399,7 @@
                   "groupLink": {
                     "type": "string",
                     "description": "Unique whatsApp identifier for the given Chat (either group or personnal)",
-                    "example": "5515998566622@c.us"
+                    "example": "https://chat.whatsapp.com/<group_id>"
                   }
                 }
               }
@@ -7220,6 +7220,96 @@
                       "mimetype": "image/jpeg",
                       "data": "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII=",
                       "filename": "image.jpg"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/especial/sendMessageEveryoneGroup/{sessionId}": {
+      "post": {
+        "tags": ["Especial"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "sessionId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Unique identifier for the session (alphanumeric and - allowed)",
+            "example": "thewalkingoak"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundResponse"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Unprocessable Entity.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "groupLink": {
+                    "type": "string",
+                    "description": "Put a whatsapp group link here"
+                  },
+                  "sendMessageTypeBody": {
+                    "type": "object",
+                    "description": "In the sendMessage route, take an example and put it here"
+                  }
+                }
+              },
+              "examples": {
+                "string": {
+                  "value": {
+                    "groupLink": "https://chat.whatsapp.com/<group_id>",
+                    "sendMessageTypeBody": {
+                      "chatId": "...",
+                      "contentType": "string",
+                      "content": "Seja bem vindo a Comunidade T.W.O!"
                     }
                   }
                 }
